--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,3 +2,8 @@
     --bs-bg-opacity: 1;
     background-color: rgba(4, 5, 33);
 }
+
+.form-control {
+border: none;
+background-color: rgba(4, 5, 33);
+}
