--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,12 +2,13 @@
     --bs-bg-opacity: 1;
     background-color: rgba(4, 5, 33);
 }
-
 .form-control {
 border: none;
 background-color: rgba(4, 5, 33);
 }
-
 .nav-item > a {
     color: white;
+}
+.carousel-item {
+    width: 100%;
 }
