--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,7 +2,7 @@
     --bs-bg-opacity: 1;
     background-color: rgba(4, 5, 33);
 }
-.form-control {
+.form-control.me-2 {
 border: none;
 background-color: rgba(4, 5, 33);
 }
@@ -87,7 +87,7 @@ p {
     font-size: 1.625rem;
     margin-top: 2.1875rem;
 }
-.col > img {
+.col.presentacion > img {
     position: relative;
     z-index: 9999;
     height: 42.375rem;
@@ -110,4 +110,32 @@ p {
     margin-left:auto;
     margin-right:auto;
     display:block;
+}
+input::placeholder {
+    color: white;
+}
+textarea::placeholder {
+    color: white;
+}
+::placeholder {
+    color: white;
+}
+input, textarea {
+    background-color: black;
+    border: 3px solid white;
+    color: white;
+    z-index: 99;
+    position: relative;
+    border-radius: 0%;
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    font-weight: 400;
+    background-clip: padding-box;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
